# monopass

./: AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/: commitlint.config.cjs
.github/workflows/: build.yml  conventional-commits.yml
docs/: api-spec.md  cli-spec.md  flexible-auth-spec.md  gui-linux-testing-next-steps.md  races.md  zeroize-misses.md
docs/specs/: api-spec.md  cli-spec.md  flexible-auth-spec.md
docs/user/: git-credential-cache.md
misc/: bump_version.py
src/: conceal.rs  config.rs  db.rs  lib.rs  lock.rs  main.rs  secret.rs  settings.rs
src/agent/: auth.rs  controller.rs  desktop.rs  error.rs  export.rs  gui_auth.rs  import.rs  mod.rs  models.rs  process.rs  server.rs  state.rs
src/commands/: agent.rs  client.rs  completion.rs  contact.rs  dbg.rs  dir.rs  import.rs  item.rs  lock.rs  migrate.rs  mod.rs  models.rs  passwd.rs  password_policy.rs  path.rs  pubkey.rs  pwgen.rs  read.rs  run.rs  settings.rs  share.rs  totp.rs  transfer.rs  wordlist.rs
src/commands/init/: autostart.rs  mod.rs
tests/: gui_unlock_linux.rs  gui_unlock_macos.rs  install_sh.rs
