[package]
name = "monopass"
version = "0.1.0"
edition = "2024"

[dependencies]
age = "0.11"
axum = "0.8.9"
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.53", features = ["derive"] }
data-encoding = "2.9.0"
getrandom = "0.3.4"
hmac = "0.12.1"
http-body-util = "0.1.3"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg"] }
libc = "0.2.186"
openssl-sys = "0.9.111"
pbkdf2 = "0.12.2"
percent-encoding = "2.3.2"
rqrr = "0.10.0"
rpassword = "7.4.0"
rusqlite = { version = "0.40.1", features = ["bundled-sqlcipher-vendored-openssl", "blob"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10"
sha2 = "0.10.9"
tempfile = "3.23.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-stream = "0.1.17"
url = "2.5.7"
xdg = "3.0.0"
zeroize = { version = "1.8.2", features = ["serde"] }
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
zxcvbn = "3.1.1"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }

[profile.release]
strip = "symbols"
